--- a/templates/style.html
+++ b/templates/style.html
@@ -1,31 +1,31 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row">
-  <div class="col s12 m4 pick-your-style" id="salsa-picker">
+  <div class="col s12 l4 pick-your-style" id="salsa-picker">
     <h1 class="white-text center">Salsa</h1>
     <div class="center events-button">
     <a
       href="{{url_for('get_salsa_events')}}"
-      class="btn-large waves-effect waves-light waves-ripple"
+      class="btn-large waves-effect waves-light waves-ripple purple darken-3"
       >Find Your Events</a
     >
   </div>
   </div>
-  <div class="col s12 m4 pick-your-style" id="bachata-picker">
+  <div class="col s12 l4 pick-your-style" id="bachata-picker">
     <h1 class="white-text center">Bachata</h1>
     <div class="center events-button">
     <a
       href="{{url_for('get_bachata_events')}}"
-      class="btn-large waves-effect waves-light waves-ripple"
+      class="btn-large waves-effect waves-light waves-ripple purple darken-3"
       >Find Your Events</a
     >
   </div>
   </div>
-  <div class="col s12 m4 pick-your-style" id="kizomba-picker">
+  <div class="col s12 l4 pick-your-style" id="kizomba-picker">
     <h1 class="white-text center">Kizomba</h1>
     <div class="center events-button">
     <a
       href="{{url_for('get_kizomba_events')}}"
-      class="btn-large waves-effect waves-light waves-ripple"
+      class="btn-large waves-effect waves-light waves-ripple purple darken-3"
       >Find Your Events</a
     >
   </div>
