--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
@@ -22,23 +26,23 @@
   <body>
     <header>
       <nav>
-        <div class="nav-wrapper">
-          <a href="{{url_for('home')}}" class="brand-logo center"
-            >Dance Your Way</a
-          >
+        <div class="nav-wrapper purple darken-3">
+          <a href="{{url_for('home')}}" class="brand-logo center">
+            Dance Your Way
+          </a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
             {% if session['logged'] == True %}
             <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-            <li><a href="{{url_for('get_organisers')}}">See all Organisers</a></li>
-            <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+            <li><a href="{{url_for('get_organisers')}}">Organisers</a></li>
+            <li><a href="{{url_for('add_event')}}">Add Event</a></li>
             <li><a href="{{url_for('sign_out')}}">Log Out</a></li>
             {% else %}
             <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-            <li><a href="{{url_for('get_organisers')}}">See all Organisers</a></li>
-            <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+            <li><a href="{{url_for('get_organisers')}}">Organisers</a></li>
+            <li><a href="{{url_for('add_event')}}">Add Event</a></li>
             <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
             {% endif %}
           </ul>
@@ -55,18 +59,70 @@
       </nav>
 
       <ul class="sidenav" id="mobile-demo">
+        <a href="{{url_for('home')}}" class="brand-logo">
+          <img
+            class="brand-logo-image sidenav-logo"
+            src="https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/salsa-dancer-no-background-v2.jpg"
+            alt="Dance Your Way Logo"
+        /></a>
+        <div class="divider"></div>
+        <div class="center">
+          <a
+            href="{{url_for('home')}}"
+            class="brand-logo purple-text text-darken-3"
+          >
+            Dance Your Way
+          </a>
+        </div>
+        <div class="divider"></div>
         {% if session['logged'] == True %}
-        <li><a href="{{url_for('account')}}">Your Account</a></li>
+        <li>
+          <a href="{{url_for('account')}}"
+            ><i class="material-icons sidenav-icon">account_circle</i>Your Account</a
+          >
+        </li>
         {% endif %} {% if session['logged'] == True %}
-        <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-        <li><a href="{{url_for('get_organisers')}}">See all Organisers</a></li>
-        <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-        <li><a href="{{url_for('sign_out')}}">Log Out</a></li>
+        <li>
+          <a href="{{url_for('style')}}"
+            ><i class="material-icons sidenav-icon">search</i>Where to Dance</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('get_organisers')}}"
+            ><i class="material-icons sidenav-icon">assignment_ind</i>See Organisers</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('add_event')}}"
+            ><i class="material-icons sidenav-icon">add_circle</i>Add Event</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('sign_out')}}"
+            ><i class="material-icons sidenav-icon">close</i>Log Out</a
+          >
+        </li>
         {% else %}
-        <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-        <li><a href="{{url_for('get_organisers')}}">See all Organisers</a></li>
-        <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-        <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
+        <li>
+          <a href="{{url_for('style')}}"
+            ><i class="material-icons sidenav-icon">search</i>Where to Dance</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('get_organisers')}}"
+            ><i class="material-icons sidenav-icon">assignment_ind</i>Organisers</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('add_event')}}"
+            ><i class="material-icons sidenav-icon">add_circle</i>Add Event</a
+          >
+        </li>
+        <li>
+          <a href="{{url_for('signup')}}"
+            ><i class="material-icons sidenav-icon">check_circle</i>Log In/Sign Up</a
+          >
+        </li>
         {% endif %}
       </ul>
     </header>
@@ -74,7 +130,7 @@
     {% for message in get_flashed_messages() %}
     <div class="alert-error center container">{{ message }}</div>
     {% endfor %} {% block content %} {% endblock %}
-    <footer class="page-footer">
+    <footer class="page-footer purple darken-3">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
@@ -110,7 +166,7 @@
         $("select").formSelect();
         $(".collapsible").collapsible();
         $(".timepicker").timepicker();
-        $('.dropdown-trigger').dropdown();
+        $(".dropdown-trigger").dropdown();
         $(
           "#name,#event_name,#address,#event_image_s3,#salsa,#bachata,#kizomba,#time,#weekday"
         ).on("keypress", function (event) {
